--- a/index.html
+++ b/index.html
@@ -1,11 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>14_小案例</title>
+    <style>
+        * {
+            font-family: Arial;
+            font-size: 14px;
+            margin: 0;
+            padding: 0;
+            border: none;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+        }
+
+        body {
+            background-image: url(./images/bg.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        header {
+            height: 70px;
+            background-color: rgb(0, 0, 0, 0.7);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+
+        /* 間隔方法二 */
+        nav ul {
+            display: flex;
+            gap: 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            font-size: 20px;
+            border: 1px solid white;
+            border-radius: 8px;
+            padding: 10px;
+            /* 間隔方法一(1) */
+            /* margin-right: 20px; */
+        }
+
+        nav ul li a:hover {
+            background-color: white;
+            color: black;
+        }
+
+        /* 間隔方法一(2) */
+        /* nav ul li:last-child a {
+            margin-right: 0;
+        } */
+
+        .page-content {
+            display: flex;
+            height: calc(100vh - 70px);
+        }
+
+        .content-nav {
+            width: 1000px;
+            height: 300px;
+            margin: auto;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        .content-nav .item {
+            width: 180px;
+            height: 200px;
+            background-color: orange;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            transition: .3s ease-in-out all;
+        }
+
+        .content-nav .item:hover {
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+        }
+
+        .content-nav .item span {
+            font-size: 1.5em;
+            color: white;
+        }
+
+        .content-nav .item:nth-child(1) {
+            background-color: #595CA8;
+        }
+
+        .content-nav .item:nth-child(2) {
+            background-color: #FF9D2E;
+        }
+
+        .content-nav .item:nth-child(3) {
+            background-color: #01A6DE;
+        }
+
+        .content-nav .item:nth-child(4) {
+            background-color: #015E91;
+        }
+
+        .content-nav .item:nth-child(5) {
+            background-color: #1DC128;
+        }
+    </style>
 </head>
+
 <body>
-  
+    <!-- 頁首 -->
+    <header>
+        <a href="./14_小案例.html">
+            <img src="./images/logo.png" alt="logo">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="#">台灣校區</a></li>
+                <li><a href="#">日本校區</a></li>
+                <li><a href="#">韓國校區</a></li>
+                <li><a href="#">中國校區</a></li>
+                <li><a href="#">美國校區</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- 內容導航區 -->
+    <div class="page-content">
+        <div class="content-nav">
+            <div class="item">
+                <img src="./images/item1.png" alt="">
+                <span>我的郵箱</span>
+            </div>
+            <div class="item">
+                <img src="./images/item2.png" alt="">
+                <span>雲服務</span>
+            </div>
+            <div class="item">
+                <img src="./images/item3.png" alt="">
+                <span>手機課堂</span>
+            </div>
+            <div class="item">
+                <img src="./images/item4.png" alt="">
+                <span>微信服務</span>
+            </div>
+            <div class="item">
+                <img src="./images/item5.png" alt="">
+                <span>在線客服</span>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
