--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>14_小案例</title>
+    <title>作品連結</title>
     <style>
         * {
             font-family: Arial;
