--- a/shop/index.html
+++ b/shop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>忠慈購</title>
+    <title>里歐購</title>
     <!-- 引入頁簽圖標 -->
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <!-- 引入重置樣式 -->
@@ -18,7 +18,7 @@
         <div class="container clearfix">
             <!-- 左側歡迎區 -->
             <div class="welcome leftfix">
-                <span class="hello">忠慈購歡迎您</span>
+                <span class="hello">里歐購歡迎您</span>
                 <span>請</span>
                 <a href="#" class="login">登入</a>
                 <a href="#" class="register">註冊</a>
@@ -28,10 +28,10 @@
                 <ul class="list clearfix">
                     <li><a href="#">我的訂單</a></li>
                     <li><a href="#">我的購物車</a></li>
-                    <li><a href="#">我的忠慈購</a></li>
-                    <li><a href="#">忠慈購會員</a></li>
+                    <li><a href="#">我的里歐購</a></li>
+                    <li><a href="#">里歐購會員</a></li>
                     <li><a href="#">企業採購</a></li>
-                    <li><a href="#">關注忠慈購</a></li>
+                    <li><a href="#">關注里歐購</a></li>
                     <li><a href="#">合作招商</a></li>
                     <li><a href="#">商家後台</a></li>
                 </ul>
@@ -43,7 +43,7 @@
     <div class="header">
         <div class="container clearfix">
             <div class="logo leftfix">
-                <img src="./images/logo.png" alt="忠慈購">
+                <img src="./images/logo.png" alt="里歐購">
             </div>
             <div class="search rightfix">
                 <form action="#">
@@ -753,13 +753,13 @@
                     <li><a href="#">奪寶島</a></li>
                     <li><a href="#">DIY裝機</a></li>
                     <li><a href="#">延保服務</a></li>
-                    <li><a href="#">忠慈購E卡</a></li>
-                    <li><a href="#">忠慈購通信</a></li>
+                    <li><a href="#">里歐購E卡</a></li>
+                    <li><a href="#">里歐購通信</a></li>
                     <li><a href="#">商品智能</a></li>
                 </ul>
                 <ul class="links-list">
                     <li><a href="#">自營覆蓋區縣</a></li>
-                    <li><a href="#">忠慈購已向全國2661個區縣</a></li>
+                    <li><a href="#">里歐購已向全國2661個區縣</a></li>
                     <li><a href="#">提供自 營配送服務，支持貨到</a></li>
                     <li><a href="#">付款、POS 機刷卡和售後上門</a></li>
                     <li><a href="#">常見問題</a></li>
