--- a/index.html
+++ b/index.html
@@ -1,171 +1,114 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>作品連結</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <style>
-        * {
-            font-family: Arial;
-            font-size: 14px;
-            margin: 0;
-            padding: 0;
-            border: none;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        ul {
-            list-style: none;
-        }
-
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-        }
-
-        body {
-            background-image: url(./images/bg.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        header {
-            height: 70px;
-            background-color: rgb(0, 0, 0, 0.7);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-        }
-
-        /* 間隔方法二 */
-        nav ul {
-            display: flex;
-            gap: 20px;
-        }
-
-        nav ul li a {
-            color: white;
-            font-size: 20px;
-            border: 1px solid white;
-            border-radius: 8px;
-            padding: 10px;
-            /* 間隔方法一(1) */
-            /* margin-right: 20px; */
-        }
-
-        nav ul li a:hover {
-            background-color: white;
-            color: black;
-        }
-
-        /* 間隔方法一(2) */
-        /* nav ul li:last-child a {
-            margin-right: 0;
-        } */
-
-        .page-content {
-            display: flex;
-            height: calc(100vh - 70px);
-        }
-
-        .content-nav {
-            width: 1000px;
-            height: 300px;
-            margin: auto;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-
-        .content-nav .item {
-            width: 180px;
-            height: 200px;
-            background-color: orange;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
-            transition: .3s ease-in-out all;
-        }
-
-        .content-nav .item:hover {
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
-        }
-
-        .content-nav .item span {
-            font-size: 1.5em;
-            color: white;
-        }
-
-        .content-nav .item:nth-child(1) {
-            background-color: #595CA8;
-        }
-
-        .content-nav .item:nth-child(2) {
-            background-color: #FF9D2E;
-        }
-
-        .content-nav .item:nth-child(3) {
-            background-color: #01A6DE;
-        }
-
-        .content-nav .item:nth-child(4) {
-            background-color: #015E91;
-        }
-
-        .content-nav .item:nth-child(5) {
-            background-color: #1DC128;
-        }
+      .card {
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+      .card:hover {
+        transform: scale(1.04);
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.18);
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- 頁首 -->
     <header>
-        <a href="./14_小案例.html">
-            <img src="./images/logo.png" alt="logo">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="#">台灣校區</a></li>
-                <li><a href="#">日本校區</a></li>
-                <li><a href="#">韓國校區</a></li>
-                <li><a href="#">中國校區</a></li>
-                <li><a href="#">美國校區</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand" href="#"> Leo's Portfolio </a>
+          <a class="navbar-item" href="https://github.com/Leo-Chang-97/Static-Portfolio">
+            <i class="fa-brands fa-github fs-5"></i>
+          </a>
+        </div>
+      </nav>
     </header>
     <!-- 內容導航區 -->
-    <div class="page-content">
-        <div class="content-nav">
-            <div class="item">
-                <img src="./images/item1.png" alt="">
-                <span>我的郵箱</span>
-            </div>
-            <div class="item">
-                <img src="./images/item2.png" alt="">
-                <span>雲服務</span>
-            </div>
-            <div class="item">
-                <img src="./images/item3.png" alt="">
-                <span>手機課堂</span>
-            </div>
-            <div class="item">
-                <img src="./images/item4.png" alt="">
-                <span>微信服務</span>
-            </div>
-            <div class="item">
-                <img src="./images/item5.png" alt="">
-                <span>在線客服</span>
-            </div>
-        </div>
+    <div class="page-content mt-5">
+      <div class="container d-flex flex-row flex-wrap gap-5" id="card-list">
+        <!-- 卡片 -->
+      </div>
     </div>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      let data = [
+        {
+          src: "./images/card-01.png",
+          title: "Haagen-Dazs-官網切版",
+          description: "HTML/CSS",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/ice-cream-page",
+        },
+        {
+          src: "./images/card-02.png",
+          title: "Interior-室內設計切版",
+          description: "HTML/SASS/RWD",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/interior",
+        },
+        {
+          src: "./images/card-03.png",
+          title: "履歷網站切版",
+          description: "HTML/SASS/RWD",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/my-resume",
+        },
+        {
+          src: "./images/card-04.png",
+          title: "仿Facebook切版",
+          description: "Bootsrap",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/bootstrap/facebook.html",
+        },
+        {
+          src: "./images/card-05.png",
+          title: "仿Flickr切版",
+          description: "Bootsrap",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/bootstrap/flickr.html",
+        },
+        {
+          src: "./images/card-06.png",
+          title: "電商網站切版",
+          description: "HTML/CSS",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/shop",
+        },
+        {
+          src: "./images/card-07.png",
+          title: "HTML/CSS 學習筆記",
+          description: "HTML/CSS",
+          link: "https://leo-chang-97.github.io/Static-Portfolio/html-css-note",
+        },
+      ];
+      let cardList = document.getElementById("card-list");
+      for (let i = 0; i < data.length; i++) {
+        cardList.innerHTML += `
+          <div class="card" style="width: 18rem">
+            <img src="${data[i].src}" class="card-img-top" alt="${data[i].title}" />
+            <div class="card-body">
+              <h5 class="card-title">${data[i].title}</h5>
+              <p class="card-text fs-6 text-secondary">${data[i].description}</p>
+              <a href="${data[i].link}" class="btn btn-primary">前往作品</a>
+            </div>
+          </div>
+        `;
+      }
+    </script>
+  </body>
 </html>
