--- a/javascript-practice/CRUD.html
+++ b/javascript-practice/CRUD.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>模擬後台練習</title>
+    <title>CRUD模擬後台</title>
     <style>
       * {
         margin: 0;
